*problema de padding e footer

--- a/artigo004.html
+++ b/artigo004.html
@@ -142,8 +142,8 @@
 
     <footer>
         <p>
-            Site de Henrique Asunción <img src="imagens/heheha.png" alt="Heheha">, Julia Soares, Thomas e Alex
-            Miguel do 2° Mtec Info Manhã
+            Henrique Asunción <img src="imagens/capybara.png" alt="Capivara">, Julia Soares, Thomas e Alex
+            Miguel, 2° Mtec Informática Manhã
         </p>
     </footer>
 
