*barra de rolagem no index

--- a/artigo001.html
+++ b/artigo001.html
@@ -179,8 +179,7 @@
         </div>
         <footer>
             <p>
-                Henrique Asunción <img src="imagens/capybara.png" alt="Capivara">, Julia Soares, Thomas e Alex
-                Miguel, 2° Mtec Informática Manhã
+                2° Mtec Informática Manhã, professor Adil
             </p>
         </footer>
     </main>
