--- a/artigo004.html
+++ b/artigo004.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vegan Thinking - Maquiagens veganas</title>
+    <title>Vegan Thinking - Veganismo não é um movimento para rico</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/artigos.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
@@ -142,8 +142,7 @@
 
     <footer>
         <p>
-            Henrique Asunción <img src="imagens/capybara.png" alt="Capivara">, Julia Soares, Thomas e Alex
-            Miguel, 2° Mtec Informática Manhã
+            2° Mtec Informática Manhã, professor Adil
         </p>
     </footer>
 
