--- a/artigos.html
+++ b/artigos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vegan Thinking - Início</title>
+    <title>Vegan Thinking - Artigos</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/inicio.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
@@ -13,7 +13,7 @@
 <style>
     /*GAMBIARRA*/
 
-    @media (max-width: 450px) {
+    @media (max-width: 780px) {
         .imagemArtigo {
             width: 93.25px;
             height: 49.88px;
