--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div id="artigoPrincipal" class="Container">
             <a href="index.html">
                 <picture>
-
+                    <source media="(max-width: 380px)" srcset="imagens/veganismo02.png">
                     <source media="(max-width: 900px)" srcset="imagens/veganismo.png">
                     <img id="artigo-principal" src="imagens/veganismo-pc02.png"
                         onmouseover="this.src='imagens/veganismo-pc01.jpg'"
