--- a/artigo005.html
+++ b/artigo005.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vegan Thinking - Maquiagens veganas</title>
+    <title>Vegan Thinking - Por que o veganismo tem que ser anticapitalista</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/artigos.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
@@ -134,8 +134,7 @@
 
     <footer>
         <p>
-            Henrique Asunción <img src="imagens/capybara.png" alt="Capivara">, Julia Soares, Thomas e Alex
-            Miguel, 2° Mtec Informática Manhãhã
+            2° Mtec Informática Manhã, professor Adil
         </p>
     </footer>
 
