--- a/noticias.html
+++ b/noticias.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vegan Thinking - Início</title>
+    <title>Vegan Thinking - Notícias</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/inicio.css">
     <link rel="stylesheet" href="estilo/noticias.css">
@@ -126,7 +126,7 @@
                     <div class="Noticia">
                         <div class="conteudoNoticias">
                             <a href="https://www.youtube.com/watch?v=CS7cBvsh23M&t=10s" target="_blank">
-                                <img src="imagens/noticia-felipe-neto.jpg" alt="Blogueiro Felipe Neto">
+                                <img src="imagens/noticia-felipe-neto.jpg" alt="Felipe Neto">
                                 <p>17/06/22</p>
                                 <p>Felipe Neto anuncia que deixou de ser vegetariano</p>
                             </a>
