--- a/artigo005.html
+++ b/artigo005.html
@@ -90,7 +90,7 @@
             </p>
             <p>
                 É importante iluminar, também, o fato de que o modelo de produção capitalista é contraditório em relação
-                aos resultados buscados pela luta vegana. No que diz respeito à preservação do meio ambiente⁵, é
+                aos resultados buscados pela luta vegana. No que diz respeito à preservação do meio ambiente, é
                 importante entender que o capitalismo é um sistema econômico que depende de uma grande magnitude de
                 consumo, da obsolescência planejada e da produção em massa, aspectos que estão diretamente ligados à
                 poluição que geramos. O nível de lixo que produzimos, resíduos e poluentes do ar, está necessariamente
