menu hamburguer padding right

--- a/noticias.html
+++ b/noticias.html
@@ -22,7 +22,7 @@
 
             <nav id="links" class="CentralizadorPC">
                 <input type="checkbox" id="checkbox">
-                <label for="checkbox" id="hamburguer">&#x268c;</label>
+                <label for="checkbox" id="hamburguer">&#x268c;&nbsp;</label>
                 <ul class="CentralizadorPC">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="noticias.html">NOTÍCIAS</a></li>
