--- a/noticias.html
+++ b/noticias.html
@@ -17,7 +17,7 @@
     <header id="topo">
         <div class="Container Flex">
             <div id="Logo">
-                <a href="index.html"><img src="imagens/logo-site.png" alt="Logo do site" id="logo-site"></a>
+                &nbsp;<a href="index.html"><img src="imagens/logo-site.png" alt="Logo do site" id="logo-site"></a>
             </div>
 
             <nav id="links" class="CentralizadorPC">
